tests/ui/rfcs/rfc-1937-termination-trait/termination-trait-test-wrong-type.stderr
error[E0277]: the trait bound `f32: Termination` is not satisfied
  --> $DIR/termination-trait-test-wrong-type.rs:6:31
   |
LL | #[test]
   | ------- in this attribute macro expansion
LL | fn can_parse_zero_as_f32() -> Result<f32, ParseFloatError> {
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Termination` is not implemented for `f32`
   |
   = note: required for `Result<f32, ParseFloatError>` to implement `Termination`
note: required by a bound in `assert_test_result`
  --> $SRC_DIR/test/src/lib.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
